--- a/javascript/ejemplo02-web/ejemplo01.html
+++ b/javascript/ejemplo02-web/ejemplo01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="javascript" src="js/ejemplo.js">
+        <script type="text/javascript" src="js/ejemplo.js">
         </script>
     </head>
     <body><marquee>Es viernes!</marquee></body>
