--- a/javascript/ejemplo02-web/ejemplo08_georreferenciacion.html
+++ b/javascript/ejemplo02-web/ejemplo08_georreferenciacion.html
@@ -19,7 +19,7 @@
 		}
 	}
 	function aVerDondeEstoy(posicion){
-		var latitud = posicion.coords.latitude;
+		var latitud = posicion.coords.latitude;//{coords:{latitude:3.15,longitude:40.14}}
 		var longitud = posicion.coords.longitude;
 		var imageUrl = "http://maps.google.com/maps/api/staticmap?"+
 				"sensor=false&"+
@@ -41,7 +41,7 @@
 			resultadoError = resultadoError + "\nError desconocido";	
 		}
 		if(error.code == 1){
-			resultadoError = resultadoError + "\nEl usuario no ha compartido su ubicación";	
+			resultadoError = resultadoError + "\nEl usuario no ha compartido su ubicaciï¿½n";	
 		}
 		if(error.code == 2){
 			resultadoError = resultadoError + "\nNo se puede obtener su posicion actual";	
