Agregada imagen al documento

--- a/javascript/ejemplo02-web/ejercicio_ferrari.html
+++ b/javascript/ejemplo02-web/ejercicio_ferrari.html
@@ -9,11 +9,11 @@
 	<body>
 		<section id="contenedor">
 			<div id="detalle">
-				<img alt="logo" src="media/logo.jpg" width="50">
+				<img alt="logo" src="images/logo.jpg" width="50">
 			</div>
 			<header id="cabecera">
 				<section id="Logo">
-					<img alt="logo" src="media/logo.jpg" width="150">
+					<img alt="logo" src="images/logo.jpg" width="150">
 				</section>
 				<section id="Titulo">
 					<h1>TITULO</h1>
@@ -110,7 +110,7 @@
 			</section>
 			<footer id="pie">
 				<section>
-					© 2014 Copyright
+					© 2016 Getafe Rules
 				</section>
 			</footer>
 		</section>
