Modificacion de titulos y ejemplo dom lista

--- a/javascript/ejemplo03-jquery/ejemplo-10-focus-blur.html
+++ b/javascript/ejemplo03-jquery/ejemplo-10-focus-blur.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ejemplo de presion del click de rat&oacute;n</title>
+    <title>Ejemplo de focus y blur</title>
     <link rel="stylesheet" href="css/ejemplo-10.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="js/ejemplo-10.js"></script>
