--- a/javascript/ejemplo04-bootstrap/ejemplo-02-bootstrap-grid.html
+++ b/javascript/ejemplo04-bootstrap/ejemplo-02-bootstrap-grid.html
@@ -16,10 +16,12 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="css/estilos-grid.css">
 </head>
 <body>
    <div class="container">
        <h1>Ejemplos de GRID</h1>
+       
        <h2>Columna de tamaño 12</h2>
 
         <div class="row">
@@ -29,6 +31,59 @@
             <div class="col-xs-12">4</div>
         </div>
 
+        <h2>Columna de tamaño 6</h2>
+
+        <div class="row">
+            <div class="col-xs-6">1</div>
+            <div class="col-xs-6">2</div>
+            <div class="col-xs-6">3</div>
+            <div class="col-xs-6">4</div>
+        </div>
+
+        <h2>Columna de tamaño 4</h2>
+
+        <div class="row">
+            <div class="col-xs-4">1</div>
+            <div class="col-xs-4">2</div>
+            <div class="col-xs-4">3</div>
+            <div class="col-xs-4">4</div>
+        </div>
+
+        <h2>Columna de tamaño 3</h2>
+
+        <div class="row">
+            <div class="col-xs-3">1</div>
+            <div class="col-xs-3">2</div>
+            <div class="col-xs-3">3</div>
+            <div class="col-xs-3">4</div>
+        </div>
+
+        <h2>En multidispositivo</h2>
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">1 - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus magni, incidunt natus perferendis similique totam atque, nesciunt nam nobis</div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">2</div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">3</div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">4</div>
+        </div>
+
+        <h2>En multidispositivo con clearfix</h2>
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">1 - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus magni, incidunt natus perferendis similique totam atque, nesciunt nam nobis</div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">2</div>
+            <div class="clearfix visible-sm-block"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">3</div>
+            <div class="clearfix visible-sm-block"></div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">4</div>
+        </div>
+
+        <h2>Huecos con offset</h2>
+
+        <div class="row">
+            <div class="col-md-4">.col-md-4</div>
+            <div class="col-md-4 col-md-offset-4">.col-md-4 .col-md-offset-4</div>
+        </div>
    </div>
 </body>
 </html>
