--- a/javascript/ejemplo04-bootstrap/ejemplo-02-bootstrap-grid.html
+++ b/javascript/ejemplo04-bootstrap/ejemplo-02-bootstrap-grid.html
@@ -84,6 +84,22 @@
             <div class="col-md-4">.col-md-4</div>
             <div class="col-md-4 col-md-offset-4">.col-md-4 .col-md-offset-4</div>
         </div>
+
+        <div class="row">
+            <div class="col-md-3 col-md-offset-3">.col-md-3 .col-md-offset-3</div>
+            <div class="col-md-3 col-md-offset-3">.col-md-3 .col-md-offset-3</div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3" >.col-md-6 .col-md-offset-3</div>
+        </div>
+
+        <h2>Pull & Push</h2>
+
+        <div class="row">
+            <div class="col-md-9 col-md-push-3">.col-md-9 .col-md-push-3</div>
+            <div class="col-md-3 col-md-pull-9">.col-md-3 .col-md-pull-9</div>
+        </div>
    </div>
 </body>
 </html>
