Ejemplo base completo numeros primos

--- a/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/index.html
+++ b/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/index.html
@@ -11,6 +11,6 @@
 <body>
   <app-root>Loading...</app-root>
   <br/>
-  <app-ejemplo01-ngfor-ngif>Cargando componente app-ejemplo01-ngfor-ngif</app-ejemplo01-ngfor-ngif>
+  <app-numeros-primos>Cargando Componente de Numeros primos</app-numeros-primos>
 </body>
 </html>
