Agregado comunicacion imput

--- a/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/index.html
+++ b/javascript/ejemplo06-angular2/ejemplo-02-angular2/src/index.html
@@ -11,6 +11,9 @@
 <body>
   <app-root>Loading...</app-root>
   <br/>
-  <app-numeros-primos-con-servicio>Cargando Componente de Numeros primos</app-numeros-primos-con-servicio>
+  <app-numeros-primos-leyenda>
+    Cargando Leyenda
+  </app-numeros-primos-leyenda>
+  
 </body>
 </html>
